# robot2022-vision

./: 2020_vision.service  2020_vision_setup.service  2022_vision.service  2022_vision_setup.service  CMakeLists.txt  DataSender.cpp  DataSender.h  InfiniteRechargeProcessor.cpp  InfiniteRechargeProcessor.h  InfiniteRechargeTargetModel.cpp  InfiniteRechargeTargetModel.h  InfiniteRechargeVision.cpp  InfiniteRechargeVision.h  PS3Eye.h  README.md  RapidReactProcessor.cpp  RapidReactProcessor.h  RapidReactTargetModel.cpp  RapidReactTargetModel.h  RapidReactVision.cpp  RapidReactVision.h  Setup.cpp  Setup.h  TargetFinder.cpp  TargetFinder.h  VisionData.hpp  camera_setup.sh  json_ex.json  main.cpp  target_json.txt
